--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -24,19 +24,11 @@ jobs:
         # Asegúrate de que esta versión coincida con la de tu proyecto
         dotnet-version: '9.0.300'
     
-    # 3. Restore Dependencies: Restaura los paquetes NuGet del proyecto
-    - name: Restore dependencies
-      run: dotnet restore -r linux-x64
-
-    # 4. Build: Compila el proyecto en modo Release
-    - name: Build
-      run: dotnet build Clinic --self-contained true --configuration Release --no-restore --os linux
-
-    # 5. Publish: Crea los archivos listos para producción
+    # 3. Publish: Crea los archivos listos para producción
     - name: Publish
-      run: dotnet publish Clinic --self-contained true --no-restore --no-build --output /home/runner/work/dotnet-webapp --runtime linux-x64
+      run: dotnet publish Clinic --self-contained true --output /home/runner/work/dotnet-webapp --runtime linux-arm64
 
-    # 6. Copy files: Copiar archivos usando SCP
+    # 4. Copy files: Copiar archivos usando SCP
     - name: Copy files via SSH
       uses: appleboy/scp-action@v1
       with:
@@ -48,7 +40,7 @@ jobs:
         strip_components: 4
         rm: true
       
-    # 7. Update files on remote: Copiar archivos usando SSH
+    # 5. Update files on remote: Copiar archivos usando SSH
     - name: Execute remote SSH commands using key
       uses: appleboy/ssh-action@v1
       with:
